# aiorwlock

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
aiorwlock/: __init__.py  __init__.pyi
examples/: context_manager.py  simple.py
spec/: aiorwlock.cfg  aiorwlock.tla
tests/: conftest.py  test_corner_cases.py  test_rwlock.py  test_version.py
tests/pep492/: test_492.py
