[tool.poetry]
name = "aiorwlock"
version = "1.5.0"
description = "Read write lock for asyncio."
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/aio-libs/aiorwlock"
repository = "https://github.com/aio-libs/aiorwlock"
documentation = "https://github.com/aio-libs/aiorwlock"
keywords = ["aiorwlock", "lock", "asyncio"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
bandit = "1.8.6"
black = "25.1.0"
flake8-bugbear = "24.12.12"
flake8 = "7.3.0"
isort = "6.0.1"
mypy = "1.17.0"
pyroma = "5.0"
pytest-asyncio = "1.1.0"
pytest-cov = "6.2.1"
pytest = "8.4.1"
coverage = "^7.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["error"]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.mypy]
[tool.mypy-pytest]
ignore_missing_imports = true
